--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha"
   },  
-  "main": "./lib/mongo-join",  
+  "main": "./lib/index",  
   "repository": {
     "type": "git",
     "url": "https://github.com/cbumgard/node-mongo-join"
