--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     }
   ],  
   "dependencies": {
-    "async": "0.1.x"
+    "mongodb": "1.2.x",    
+    "async": "0.1.x",
+    "underscore": "1.4.x"
   },
   "devDependencies": {
-    "mongodb": "1.2.x",    
     "mocha": "1.7.x",
     "should": "1.2.x"
   },  
